<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pag12">

    <ImageView
        android:id="@+id/stemmap12"
        android:layout_width="248dp"
        android:layout_height="272dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/viewp12"
        app:layout_constraintEnd_toStartOf="@+id/titolop12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stemma" />

    <TextView
        android:id="@+id/titolop12"
        android:layout_width="1119dp"
        android:layout_height="168dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/titolo"
        android:textColor="@android:color/black"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewp12"
        android:layout_width="1440dp"
        android:layout_height="2dp"
        android:layout_marginTop="368dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/geomp12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toEndOf="@+id/fotop121"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verdeaq" />

    <ImageView
        android:id="@+id/fotop122"
        android:layout_width="869dp"
        android:layout_height="850dp"
        android:layout_marginStart="571dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/slide122" />

    <ImageView
        android:id="@+id/fotop121"
        android:layout_width="869dp"
        android:layout_height="850dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toTopOf="@+id/fotop122"
        app:layout_constraintEnd_toStartOf="@+id/testop122"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testop121"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/slide121" />

    <TextView
        android:id="@+id/testop121"
        android:layout_width="1027dp"
        android:layout_height="228dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="160dp"
        android:text="@string/sottotitolo"
        android:textColor="@color/grigioscuro"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolop12" />

    <TextView
        android:id="@+id/testop122"
        android:layout_width="533dp"
        android:layout_height="473dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="328dp"
        android:text="@string/immagine1"
        android:textColor="@color/grigioscuro"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/fotop122"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geomp12" />

    <TextView
        android:id="@+id/testop123"
        android:layout_width="575dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="8dp"
        android:text="@string/immagine2"
        android:textColor="@color/grigioscuro"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotop121"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backbtnpag12"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1244dp"
        android:layout_marginBottom="96dp"
        android:background="@color/blunotte"
        android:clickable="true"
        android:tint="@color/colorAccent"

        app:backgroundTint="@color/blunotte"
        app:fabCustomSize="68dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="34dp"
        app:srcCompat="@drawable/arrowleftmedia" />



</android.support.constraint.ConstraintLayout>