<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaPagIn">


    <TextView
        android:id="@+id/textView"
        android:layout_width="980dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="363dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="54dp"
        android:text="@string/Titolo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/black"
        android:textSize="85sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinevert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="1452dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="271dp"
        android:layout_height="315dp"
        android:layout_marginStart="119dp"

        android:layout_marginTop="96dp"
        android:layout_marginBottom="308dp"

        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="contentDescription" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backseconda"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1244dp"
        android:layout_marginBottom="96dp"
        android:background="@color/blunotte"
        android:clickable="true"
        android:tint="@color/colorAccent"

        app:backgroundTint="@color/colorPrimaryDark"
        app:fabCustomSize="68dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:maxImageSize="34dp"
        app:srcCompat="@drawable/arrowleftmedia" />

    <View
        android:id="@+id/view40"
        android:layout_width="5dp"
        android:layout_height="1780dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="724dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="400dp"
        android:layout_height="255dp"

        android:layout_marginStart="636dp"
        android:layout_marginTop="340dp"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verdeaq_corto"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titolo1"
        android:textAlignment="viewStart"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView50"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view41"
        android:layout_width="320dp"
        android:layout_height="7dp"

        android:layout_marginEnd="72dp"
        android:background="@color/blunotte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <View
        android:id="@+id/view48"
        android:layout_width="1000dp"
        android:layout_height="236dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="400dp"
        android:layout_height="255dp"
        android:layout_marginStart="380dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/imageView50"
        app:srcCompat="@drawable/arancione_corto"
        tools:ignore="contentDescription" />


    <TextView
        android:id="@+id/textView51"
        android:layout_width="375dp"
        android:layout_height="127dp"
        android:layout_marginTop="712dp"
        android:text="@string/facciata1"
        android:textAlignment="viewEnd"
        android:textSize="45sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView51"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view42"
        android:layout_width="380dp"
        android:layout_height="7dp"
        android:background="#ee9524"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <View
        android:id="@+id/view49"
        android:layout_width="1000dp"
        android:layout_height="290dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="440dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view48" />

    <ImageView
        android:id="@+id/imageView52"
        android:layout_width="400dp"
        android:layout_height="255dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textView51"
        app:layout_constraintTop_toBottomOf="@+id/imageView51"
        app:srcCompat="@drawable/rosa_corto_d"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="56dp"
        android:text="@string/titologallery1"
        android:textAlignment="viewStart"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <View
        android:id="@+id/view43"
        android:layout_width="340dp"
        android:layout_height="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:background="@color/fucsia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <View
        android:id="@+id/view50"
        android:layout_width="1000dp"
        android:layout_height="290dp"
        android:layout_marginStart="439dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/view49" />

    <ImageView
        android:id="@+id/imageView56"
        android:layout_width="400dp"
        android:layout_height="255dp"

        android:layout_marginTop="56dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toStartOf="@+id/textView52"
        app:layout_constraintTop_toBottomOf="@+id/imageView52"
        app:srcCompat="@drawable/blu_cortos"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="386dp"
        android:layout_height="264dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="8dp"
        android:text="@string/particolari1"
        android:textAlignment="textEnd"
        android:textSize="42sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView56"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <View
        android:id="@+id/view44"
        android:layout_width="390dp"
        android:layout_height="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="332dp"
        android:background="@color/blu"
        app:layout_constraintBottom_toTopOf="@+id/view53"
        app:layout_constraintEnd_toStartOf="@+id/view52"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert" />

    <View
        android:id="@+id/view51"
        android:layout_width="1000dp"
        android:layout_height="290dp"
        android:layout_marginEnd="440dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view50" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="412dp"
        android:layout_height="255dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="40dp"

        app:layout_constraintStart_toEndOf="@+id/textView53"
        app:layout_constraintTop_toBottomOf="@+id/imageView56"
        app:srcCompat="@drawable/verdeaq_corto"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:text="@string/descrizione_pag161"
        android:textAlignment="viewStart"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView53"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <View
        android:id="@+id/view45"
        android:layout_width="390dp"
        android:layout_height="7dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:background="@color/blunotte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView53"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <View
        android:id="@+id/view52"
        android:layout_width="1000dp"
        android:layout_height="290dp"
        android:layout_marginStart="439dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/view51" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="400dp"
        android:layout_height="255dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="636dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView53"
        app:srcCompat="@drawable/arancione_corto"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="416dp"
        android:text="@string/neviera1"
        android:textAlignment="textEnd"
        android:textSize="45sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView54"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <View
        android:id="@+id/view46"
        android:layout_width="250dp"
        android:layout_height="7dp"
        android:layout_marginStart="160dp"
        android:background="#ee9524"
        app:layout_constraintStart_toEndOf="@+id/guidelinevert"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <View
        android:id="@+id/view53"
        android:layout_width="1000dp"
        android:layout_height="265dp"
        android:layout_marginEnd="440dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view52" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="400dp"
        android:layout_height="255dp"

        android:layout_marginStart="432dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/backseconda"
        app:layout_constraintTop_toBottomOf="@+id/imageView54"
        app:srcCompat="@drawable/rosa_corto_d"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:text="@string/convittori1"
        android:textAlignment="viewStart"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView55"
        app:layout_constraintTop_toBottomOf="@+id/view45" />

    <View
        android:id="@+id/view47"
        android:layout_width="390dp"
        android:layout_height="8dp"
        android:layout_marginEnd="21dp"
        android:background="@color/fucsia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView55"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <View
        android:id="@+id/view54"
        android:layout_width="1000dp"
        android:layout_height="290dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/backseconda"
        app:layout_constraintTop_toBottomOf="@+id/view53" />

</android.support.constraint.ConstraintLayout>

